# DRONE_ACHARYA

./: .gitignore
drone_acharya_bringup/: CMakeLists.txt  issues.md  package.xml  ros2_log.txt  ros2_log.txt_1
drone_acharya_bringup/config/: ros_gz_bridge_drone_v1.yaml  ros_gz_bridge_drone_v2.yaml
drone_acharya_bringup/launch/: drone_launch.launch  ign_drone_v1.launch.py  vis_drone.launch.py  vis_drone_v1.launch.py  vis_drone_v2.launch.py
drone_acharya_bringup/log_files/: ros2_log.txt
drone_acharya_bringup/models/cube/: model.config  model.sdf
drone_acharya_bringup/models/drone_v1/: model.config  model.sdf
drone_acharya_bringup/models/drone_v2/: model.config  model.sdf
drone_acharya_bringup/models/ign_drone_v1/: model.config  model.sdf
drone_acharya_bringup/models/iris_with_standoffs/: model.sdf
drone_acharya_bringup/scripts/: __play__.ipynb  drone_basic.py  drone_teleop.py  flight_command_pub.py  mpc_controller.py  support_files_drone.py  test_flight_command_pub.py
drone_acharya_bringup/scripts/.ipynb_checkpoints/: __play__-checkpoint.ipynb
drone_acharya_bringup/scripts/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
drone_acharya_bringup/scripts/drone_acharya_bringup/: __play__.ipynb  flight_command_pub.py  mpc_controller.py  test.py  test_flight_command_pub.py
drone_acharya_bringup/src/: MAIN_LPV_MPC_drone.py  support_files_drone.py
drone_acharya_bringup/worlds/: drone_v1_world.sdf  drone_v2_world.sdf  drone_world.sdf  ign_drone_v1_world.sdf  test.sdf
(+1 files in other folders)
